connects the add to bag buttons to the cart, connects cartSrvc to the three cart controllers, fixes the gap that appeared on the secondaryNavbar when window width hit a certain width

--- a/public/styles/css/secondaryNavBar.scss
+++ b/public/styles/css/secondaryNavBar.scss
@@ -7,7 +7,7 @@ $sec-nav-background: #FFFFFF;
 }
 .secondaryNavbar-wrapper{
   z-index: 1;
-  width: 93.907vw;
+  width: calc(100vw - 100px);
   height: 80px;
   background-color: $sec-nav-background;
   position: fixed;
